Demand Navigator/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Forecast Budget Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Sales Proration</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Forecast Gap Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Gap Closed</fullName>
        </values>
        <values>
            <fullName>Gap Commit</fullName>
        </values>
        <values>
            <fullName>Gap In Progress</fullName>
        </values>
        <values>
            <fullName>Gap Missed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Forecast Revenue Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>End Game</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Gap Closed</fullName>
        </values>
        <values>
            <fullName>Gap Commit</fullName>
        </values>
        <values>
            <fullName>Gap In Progress</fullName>
        </values>
        <values>
            <fullName>Gap Missed</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Sales Proration</fullName>
        </values>
        <values>
            <fullName>Shaping</fullName>
        </values>
        <values>
            <fullName>Solutioning</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actuals_to_Date__c</fullName>
        <label>Actuals to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Planning Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Planning_Version__c.Is_this_a_Budget_Planning_Version__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities (Budget Planning Version)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BussinessUnit__c</fullName>
        <label>BussinessUnit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>UK and Ireland</fullName>
                </value>
                <value>
                    <fullName>AMEA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>South and West Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Duration__c</fullName>
        <label>Deal Duration(months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_TCV__c</fullName>
        <label>Deal TCV $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_offshore__c</fullName>
        <formula>Offshore_Resource__c * Rate_per_Head_offshore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal offshore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_onsite__c</fullName>
        <formula>Onsite_Resource__c * Rate_per_Head_onsite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal onsite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demand_Key__c</fullName>
        <formula>TEXT(BussinessUnit__c) &amp;&apos;-&apos;&amp; TEXT(Division__c) &amp;&apos;-&apos;&amp; TEXT(Service_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demand Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BussinessUnit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Banking and Finance</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Opportunity_ID__c</fullName>
        <label>External Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gap Planning Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Planning_Version__c.Is_this_a_Gap_Planning_Version__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities (Gap Planning Version)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <label>Legacy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offshore_Deal_Month__c</fullName>
        <label>Offshore Deal / Month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offshore_Ratio__c</fullName>
        <formula>Offshore_Resource__c / Total_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offshore Ratio</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offshore_Resource__c</fullName>
        <label>Offshore Resource</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Deal_Month__c</fullName>
        <label>Onsite Deal / Month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Onsite_Ratio__c</fullName>
        <formula>Onsite_Resource__c / Total_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite Ratio</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Resource__c</fullName>
        <label>Onsite Resource</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>New Licenses</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <formula>DATE(
year(Project_Start_Date__c)
+ if(
mod((month(Project_Start_Date__c) + Deal_Duration__c - 1),12) = 0,
floor((month(Project_Start_Date__c) + Deal_Duration__c - 1)/12) - 1,
floor((month(Project_Start_Date__c) + Deal_Duration__c - 1)/12)

)
+ if(
and(
month(Project_Start_Date__c ) = 12,
Deal_Duration__c - 1&gt;= 12
),-1,0
)
,
if( mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ) = 0, 12 , mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ))
,
min(
day(Project_Start_Date__c),
case(
max( mod( month(Project_Start_Date__c) + Deal_Duration__c - 1, 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_per_Head_offshore__c</fullName>
        <label>Rate per Head offshore</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_per_Head_onsite__c</fullName>
        <label>Rate per Head onsite</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Cyber</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Deal__c</fullName>
        <formula>Deal_onsite__c + Deal_offshore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Resource__c</fullName>
        <formula>Onsite_Resource__c + Offshore_Resource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resource</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Budget</fullName>
        <active>true</active>
        <businessProcess>Forecast Budget Process</businessProcess>
        <label>Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gap</fullName>
        <active>true</active>
        <businessProcess>Forecast Gap Process</businessProcess>
        <label>Gap</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSB</fullName>
        <active>false</active>
        <businessProcess>Forecast Revenue Process</businessProcess>
        <label>Regular</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>B_Amount_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsBlank(Amount ), RecordType.DeveloperName = &apos;Budget&apos;)</errorConditionFormula>
        <errorMessage>Amount is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B_BudgetPlanningVersion_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsBlank( Budget_Planning_Version__c ), RecordType.DeveloperName = &apos;Budget&apos;)</errorConditionFormula>
        <errorDisplayField>Budget_Planning_Version__c</errorDisplayField>
        <errorMessage>Budget Planning is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>G_Amount_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsBlank(Amount ), RecordType.DeveloperName = &apos;Gap&apos;)</errorConditionFormula>
        <errorMessage>Amount is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>G_Gapplanningversion_Requried</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsBlank( Gap_Planning_Version__c ), RecordType.DeveloperName = &apos;Gap&apos;)</errorConditionFormula>
        <errorDisplayField>Gap_Planning_Version__c</errorDisplayField>
        <errorMessage>Gap Planning is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>G_Revenue_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Gap&apos;,
 ISBlank(Project_Start_Date__c)
)</errorConditionFormula>
        <errorMessage>Revenue Start Date Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R_ConValu_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;RSB&apos;), ISBLANK( Deal_TCV__c) )</errorConditionFormula>
        <errorMessage>Contract Value is Required Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R_Revenue_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;RSB&apos;), ISBLANK(Project_Start_Date__c) )</errorConditionFormula>
        <errorMessage>Project Start Date is Required Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R_Term_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;RSB&apos;),
OR(ISBlank(Deal_Duration__c),Deal_Duration__c&lt;1)
)</errorConditionFormula>
        <errorMessage>Contract term must be greater then zero is Required Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>revenue_start_date_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;RSB&apos;,
RecordType.DeveloperName = &apos;Gap&apos;
),
Project_Start_Date__c &lt; CloseDate
)</errorConditionFormula>
        <errorMessage>enter date as after or equal to closed date in opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>term_length_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(Deal_Duration__c), Deal_Duration__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Term cannot be less than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>